Removed top border on panel-desc Updated style for row body expander in grids Added style adjustement for grid with inline buttons and expander in package grid Updated style for selected row in grids Fixed panel collapse button

--- a/manager/templates/default/css/index.css
+++ b/manager/templates/default/css/index.css
@@ -688,6 +688,10 @@ table.classy tr.odd td {
 #modx-grid-package .green a{ color: red !important; }
 #modx-grid-package .red { color: green !important; text-align: center; }
 
+.grid-with-buttons .x-grid3-row-expanded .x-grid3-row-body {
+    margin: -45px 2px 0 -20px;
+    padding: 18px 25px 40px;
+}
 
 .pbr-provider-box {
     width: 250px;
@@ -1294,7 +1298,6 @@ body.ext-ie6 .x-superboxselect-item {margin: 2px 1px 2px 1px; line-height: 1.2em
 .panel-desc { 
 	background-color: #F7F7F7;
     border-bottom: 1px solid #E7E7E7 !important;
-    border-top: 1px solid #E7E7E7 !important;
     color: #5A5A5A;
     line-height: 1.5;
     padding: 15px !important; 
